# translator-transformer

./: .gitignore  README.md  aws-cluster.yml  infer_from_artifact.ipynb  mask.ipynb  mask_and_pe.ipynb  model_card.md  prepare_data.ipynb  pyproject.toml  requirements.txt  submit_train.py  train_distr.py  train_model.py
data/: README.md  en-tokens.json  pt-tokens.json
src/: dataset.py
translator/: dataset.py  model.py  ray_dataset.py  tokenizer.py  utils.py
