[project]
name = "translator-attn"
version = "0.1.0"
authors = [
    {name = "mrmorais",email = "maradona.morais@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "tokenizers (>=0.21.1,<0.22.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "wandb (>=0.19.10,<0.20.0)",
    "ray[train] (>=2.44.1,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false